# voice-notes-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/voice_notes_bot/: audiofile.py  bot.py  config.py  state.py
